fix(FF-4325): fix z-index issue for toggle

--- a/packages/slider/src/components/styles.module.scss
+++ b/packages/slider/src/components/styles.module.scss
@@ -15,6 +15,7 @@ $height-with-marks: calc(
     touch-action: none;
 
     position: relative;
+    z-index: 0;
 
     box-sizing: border-box;
     width: 100%;
